--- a/client/src/Components/EmployeeManagement/HRSettings/EmployeeDesignations/emp_dsgntn.scss
+++ b/client/src/Components/EmployeeManagement/HRSettings/EmployeeDesignations/emp_dsgntn.scss
@@ -1,2 +1,7 @@
 .emp_dsgntn {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border-radius: 5px;
+  border: 1px solid #d3d3d3;
+  background: #ffff;
 }
