Added Salary Management + Changes on Self Service > Attendance Regularization

--- a/client/src/Components/EmployeeManagement/SelfService/AttendanceRegularization/att_rglzn.scss
+++ b/client/src/Components/EmployeeManagement/SelfService/AttendanceRegularization/att_rglzn.scss
@@ -10,9 +10,9 @@
       line-height: 0;
     }
   }
-  #SelfService_Cntr {
+  #attendanceReg_Cntr {
     .ReactTable {
-      max-height: 30vh !important;
+      max-height: 57vh !important;
     }
   }
 }
