--- a/client/src/Components/EmployeeManagement/SelfService/AttendanceRegularization/att_rglzn.css
+++ b/client/src/Components/EmployeeManagement/SelfService/AttendanceRegularization/att_rglzn.css
@@ -8,5 +8,5 @@
     text-transform: uppercase;
     line-height: 0; }
 
-.hptl-SelfService-form #SelfService_Cntr .ReactTable {
-  max-height: 30vh !important; }
+.hptl-SelfService-form #attendanceReg_Cntr .ReactTable {
+  max-height: 57vh !important; }
