--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -660,7 +660,9 @@ textarea {
 */
 .algaeh-datePicker {
   position: relative; }
-  .algaeh-datePicker input[type="date"] {
+  .algaeh-datePicker input[type="date"],
+  .algaeh-datePicker input[type="month"],
+  .algaeh-datePicker input[type="year"] {
     font-size: 0.8rem;
     padding: 4px 0px 3px 3px;
     width: 99%;
@@ -668,7 +670,9 @@ textarea {
     border: 1px solid #d3d3d3;
     border-radius: 4px;
     background: #fff; }
-  .algaeh-datePicker input[type="date"]::-webkit-calendar-picker-indicator {
+  .algaeh-datePicker input[type="date"]::-webkit-calendar-picker-indicator,
+  .algaeh-datePicker input[type="month"]::-webkit-calendar-picker-indicator,
+  .algaeh-datePicker input[type="year"]::-webkit-calendar-picker-indicator {
     color: rgba(0, 0, 0, 0);
     opacity: 1;
     display: block;
@@ -677,7 +681,9 @@ textarea {
     height: 15px;
     border-width: thin;
     background-size: 60%; }
-  .algaeh-datePicker input[type="date"]:disabled {
+  .algaeh-datePicker input[type="date"]:disabled,
+  .algaeh-datePicker input[type="month"]:disabled,
+  .algaeh-datePicker input[type="year"]:disabled {
     background: #fffdfa;
     border: 1px dashed #d3d3d3 !important;
     color: #000;
@@ -698,7 +704,9 @@ textarea {
 .mandatory input[type="email"],
 .mandatory input[type="password"],
 .mandatory input.autoselect-input,
-.mandatory .algaeh-datePicker input[type="date"] {
+.mandatory .algaeh-datePicker input[type="date"],
+.mandatory .algaeh-datePicker input[type="month"],
+.mandatory .algaeh-datePicker input[type="year"] {
   background-color: none;
   border: 1px solid #d9ae58; }
 
