--- a/client/src/Components/EmployeeManagement/SelfService/Dashboard/dashboard.css
+++ b/client/src/Components/EmployeeManagement/SelfService/Dashboard/dashboard.css
@@ -14,7 +14,7 @@
   border: 1px solid #e1e1e1;
   margin: 0;
   padding: 0;
-  width: auto; }
+  width: 15vw; }
   .dashboard .selfServiceProfileMenu li {
     margin: 0;
     list-style: none;
@@ -28,3 +28,31 @@
       padding: 5px 10px; }
     .dashboard .selfServiceProfileMenu li:hover {
       color: #34b8bc; }
+
+.dashboard h6 {
+  word-break: break-all; }
+
+.dashboard #selfService_FamilyTable_Cntr .ReactTable,
+.dashboard #selfService_IdentificationTable_Cntr .ReactTable,
+.dashboard #selfService_WorkExpTable_Cntr .ReactTable,
+.dashboard #selfService_EducationTable_Cntr .ReactTable {
+  max-height: 20vh !important; }
+
+.dashboard .editFloatCntr {
+  position: fixed;
+  bottom: 0;
+  background: #000;
+  left: 0;
+  z-index: 99;
+  box-shadow: 0px -10px 20px rgba(0, 0, 0, 0.2);
+  padding-top: 15px;
+  width: 99vw;
+  padding-bottom: 15px; }
+  .dashboard .editFloatCntr label {
+    color: #fff; }
+  .dashboard .editFloatCntr h5 {
+    color: #fff; }
+  .dashboard .editFloatCntr button {
+    float: right;
+    margin-left: 15px;
+    margin-top: 15px; }
