--- a/client/src/Components/EmployeeManagement/SelfService/Dashboard/dashboard.scss
+++ b/client/src/Components/EmployeeManagement/SelfService/Dashboard/dashboard.scss
@@ -16,7 +16,7 @@
     border: 1px solid #e1e1e1;
     margin: 0;
     padding: 0;
-    width: auto;
+    width: 15vw;
     li {
       margin: 0;
       list-style: none;
@@ -32,6 +32,39 @@
       &:hover {
         color: #34b8bc;
       }
+    }
+  }
+  h6 {
+    word-break: break-all;
+  }
+  #selfService_FamilyTable_Cntr,
+  #selfService_IdentificationTable_Cntr,
+  #selfService_WorkExpTable_Cntr,
+  #selfService_EducationTable_Cntr {
+    .ReactTable {
+      max-height: 20vh !important;
+    }
+  }
+  .editFloatCntr {
+    position: fixed;
+    bottom: 0;
+    background: #000;
+    left: 0;
+    z-index: 99;
+    box-shadow: 0px -10px 20px rgba(0, 0, 0, 0.2);
+    padding-top: 15px;
+    width: 99vw;
+    padding-bottom: 15px;
+    label {
+      color: #fff;
+    }
+    h5 {
+      color: #fff;
+    }
+    button {
+      float: right;
+      margin-left: 15px;
+      margin-top: 15px;
     }
   }
 }
