--- a/client/src/Components/EmployeeManagement/SelfService/Dashboard/dashboard.css
+++ b/client/src/Components/EmployeeManagement/SelfService/Dashboard/dashboard.css
@@ -29,7 +29,7 @@
     .dashboard .selfServiceProfileMenu li:hover {
       color: #34b8bc; }
 
-.dashboard h6 {
+.dashboard .employeeEmail h6 {
   word-break: break-all; }
 
 .dashboard #selfService_FamilyTable_Cntr .ReactTable,
@@ -41,13 +41,15 @@
 .dashboard .editFloatCntr {
   position: fixed;
   bottom: 0;
-  background: #000;
+  background: #313131;
   left: 0;
   z-index: 99;
+  -webkit-box-shadow: 0px -10px 20px rgba(0, 0, 0, 0.2);
   box-shadow: 0px -10px 20px rgba(0, 0, 0, 0.2);
   padding-top: 15px;
   width: 99vw;
-  padding-bottom: 15px; }
+  padding-bottom: 15px;
+  border-bottom: 5px dashed #fff; }
   .dashboard .editFloatCntr label {
     color: #fff; }
   .dashboard .editFloatCntr h5 {
@@ -56,3 +58,6 @@
     float: right;
     margin-left: 15px;
     margin-top: 15px; }
+
+.dashboard h6 {
+  font-size: 0.9rem; }
