--- a/client/src/Components/EmployeeManagement/SelfService/Dashboard/dashboard.scss
+++ b/client/src/Components/EmployeeManagement/SelfService/Dashboard/dashboard.scss
@@ -34,7 +34,7 @@
       }
     }
   }
-  h6 {
+  .employeeEmail h6 {
     word-break: break-all;
   }
   #selfService_FamilyTable_Cntr,
@@ -48,13 +48,16 @@
   .editFloatCntr {
     position: fixed;
     bottom: 0;
-    background: #000;
+    background: #313131;
     left: 0;
     z-index: 99;
+    -webkit-box-shadow: 0px -10px 20px rgba(0, 0, 0, 0.2);
     box-shadow: 0px -10px 20px rgba(0, 0, 0, 0.2);
     padding-top: 15px;
     width: 99vw;
     padding-bottom: 15px;
+    border-bottom: 5px dashed #fff;
+
     label {
       color: #fff;
     }
@@ -66,5 +69,8 @@
       margin-left: 15px;
       margin-top: 15px;
     }
+  }
+  h6 {
+    font-size: 0.9rem;
   }
 }
