--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -30,7 +30,14 @@ body {
   -moz-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
   -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out; }
+  transition: all 0.2s ease-in-out;
+  min-height: 31px;
+  min-width: 52px;
+  -webkit-transition: width 2s;
+  /* Safari */
+  transition: width 2s; }
+  :global .btn i {
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5); }
 
 :global .btn:hover {
   background-position: 100% 0;
