--- a/client/src/Components/Wrapper/autoComplete.css
+++ b/client/src/Components/Wrapper/autoComplete.css
@@ -17,13 +17,15 @@
   height: 24px; }
 
 .loadingSelect {
-  display: none;
   position: absolute;
-  top: 0;
+  top: 23px;
   padding: 2px 6px;
-  right: 32px;
+  right: 35px;
   font-size: 0.7rem;
   line-height: 21px;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), color-stop(48%, white));
+  background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, white 48%);
+  background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 0%, white 48%);
   background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, white 48%);
   color: #929292;
   cursor: pointer;
