--- a/client/src/Components/Wrapper/autoComplete.scss
+++ b/client/src/Components/Wrapper/autoComplete.scss
@@ -20,18 +20,26 @@
 }
 
 .loadingSelect {
-  display: none;
   position: absolute;
-  top: 0;
+  top: 23px;
   padding: 2px 6px;
-  right: 32px;
+  right: 35px;
   font-size: 0.7rem;
   line-height: 21px;
-  background: linear-gradient(
-    to right,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 1) 48%
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgba(255, 255, 255, 0)),
+    color-stop(48%, white)
   );
+  background: -webkit-linear-gradient(
+    left,
+    rgba(255, 255, 255, 0) 0%,
+    white 48%
+  );
+  background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 0%, white 48%);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, white 48%);
   color: #929292;
   cursor: pointer;
   margin: 2px;
