--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1012,6 +1012,10 @@ $forntSize: 0.7rem;
         -o-transition: all 0.2s ease-in-out;
         -webkit-transition: all 0.2s ease-in-out;
         transition: all 0.2s ease-in-out;
+        min-height: 31px;
+        min-width: 52px;
+        -webkit-transition: width 2s; /* Safari */
+        transition: width 2s;
 
         &:hover {
           background-position: 100% 0;
@@ -1019,6 +1023,9 @@ $forntSize: 0.7rem;
           -o-transition: all 0.2s ease-in-out;
           -webkit-transition: all 0.2s ease-in-out;
           transition: all 0.2s ease-in-out;
+        }
+        i {
+          text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
         }
       }
 
