--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -34,6 +34,13 @@ body {
     -o-transition: all 0.2s ease-in-out;
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
+    min-height: 31px;
+    min-width: 52px;
+    -webkit-transition: width 2s; /* Safari */
+    transition: width 2s;
+    i {
+      text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+    }
   }
   .btn:hover {
     background-position: 100% 0;
