--- a/client/src/Components/EmployeeManagement/SelfService/Dashboard/dashboard.scss
+++ b/client/src/Components/EmployeeManagement/SelfService/Dashboard/dashboard.scss
@@ -40,7 +40,8 @@
   #selfService_FamilyTable_Cntr,
   #selfService_IdentificationTable_Cntr,
   #selfService_WorkExpTable_Cntr,
-  #selfService_EducationTable_Cntr {
+  #selfService_EducationTable_Cntr,
+  #selfService_AttachmentTable_Cntr {
     .ReactTable {
       max-height: 20vh !important;
     }
