--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -21,6 +21,8 @@
     font-size: 0.8rem !important;
     overflow: inherit !important;
     white-space: inherit !important; }
+  .ReactTable .rt-tbody .textCapitalize {
+    text-transform: capitalize; }
 
 .ReactTable .-btn {
   background: #34b8bc !important;
