--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -30,6 +30,9 @@
     }
     .textCapitalize {
       text-transform: capitalize;
+      input {
+        text-transform: capitalize;
+      }
     }
   }
   .-btn {
