--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -23,6 +23,8 @@
     white-space: inherit !important; }
   .ReactTable .rt-tbody .textCapitalize {
     text-transform: capitalize; }
+    .ReactTable .rt-tbody .textCapitalize input {
+      text-transform: capitalize; }
 
 .ReactTable .-btn {
   background: #34b8bc !important;
