--- a/client/src/Components/PayrollManagement/SalaryManagement/SalaryManagement.css
+++ b/client/src/Components/PayrollManagement/SalaryManagement/SalaryManagement.css
@@ -1,10 +1,10 @@
-.hptl-AttendanceRegularization-form {
+.salary_management .hptl-AttendanceRegularization-form {
   margin: 0 0 15px; }
 
-#Salary_Management_Cntr .ReactTable {
+.salary_management #Salary_Management_Cntr .ReactTable {
   max-height: 30vh !important; }
 
-#Employer_Contribution_Cntr .ReactTable,
-#Employee_Deductions_Cntr .ReactTable,
-#Salary_Earning_Cntr .ReactTable {
+.salary_management #Employer_Contribution_Cntr .ReactTable,
+.salary_management #Employee_Deductions_Cntr .ReactTable,
+.salary_management #Salary_Earning_Cntr .ReactTable {
   max-height: 20vh !important; }
