--- a/client/src/Components/PayrollManagement/LeaveManagement/leave_mgmt.css
+++ b/client/src/Components/PayrollManagement/LeaveManagement/leave_mgmt.css
@@ -1,5 +1,2 @@
-.leave_mgmt .leave-section {
-  border: 1px solid #d3d3d3;
-  border-radius: 5px;
-  background: #fff;
-  padding-top: 15px; }
+.leave_mgmt .tabMaster {
+  margin-bottom: 0; }
