--- a/client/src/Components/PayrollManagement/LeaveManagement/leave_mgmt.scss
+++ b/client/src/Components/PayrollManagement/LeaveManagement/leave_mgmt.scss
@@ -1,8 +1,7 @@
 .leave_mgmt {
+  .tabMaster {
+    margin-bottom: 0;
+  }
   .leave-section {
-    border: 1px solid #d3d3d3;
-    border-radius: 5px;
-    background: #fff;
-    padding-top: 15px;
   }
 }
