--- a/client/src/Components/PayrollManagement/LeaveManagement/LeaveAuthorization/LeaveAuthorization.css
+++ b/client/src/Components/PayrollManagement/LeaveManagement/LeaveAuthorization/LeaveAuthorization.css
@@ -1,6 +1,12 @@
 #leaveAuthGrid_Cntr .ReactTable {
-  max-height: 30vh !important; }
+  max-height: 23vh !important; }
 
-#currentLeaveAppGrid_Cntr .ReactTable,
+#currentLeaveAppGrid_Cntr .ReactTable {
+  min-height: 10vh !important;
+  max-height: 10vh !important; }
+  #currentLeaveAppGrid_Cntr .ReactTable .rt-table {
+    overflow: hidden; }
+
 #previousLeaveAppGrid_Cntr .ReactTable {
-  max-height: 20vh !important; }
+  min-height: 14vh !important;
+  max-height: 14vh !important; }
