Loan Authorization UI Added

--- a/client/src/Components/PayrollManagement/LoanManagement/LoanAuthorization/loan-auth.scss
+++ b/client/src/Components/PayrollManagement/LoanManagement/LoanAuthorization/loan-auth.scss
@@ -1,2 +1,13 @@
-.loan-auth {
+#LoanAuthGrid_Cntr {
+  .ReactTable {
+    max-height: 36vh !important;
+  }
+}
+#requestedLoanAppGrid_Cntr {
+  .ReactTable {
+    max-height: 20vh !important;
+    .rt-table {
+      overflow: hidden;
+    }
+  }
 }
