UI Bug fix in Sample Collection Popup and Change Barcode UI Popup

--- a/client/src/Components/Laboratory/SampleCollections/SampleCollections.css
+++ b/client/src/Components/Laboratory/SampleCollections/SampleCollections.css
@@ -5,3 +5,5 @@
   .hptl-sample-coll-details .grid-details {
     padding-top: 10px;
     padding-bottom: 10px; }
+  .hptl-sample-coll-details #sampleCollectionGrid_Cntr .ReactTable {
+    max-height: 30vh; }
