--- a/client/src/Components/Laboratory/SampleCollections/SampleCollections.scss
+++ b/client/src/Components/Laboratory/SampleCollections/SampleCollections.scss
@@ -9,4 +9,9 @@
     padding-top: 10px;
     padding-bottom: 10px;
   }
+  #sampleCollectionGrid_Cntr {
+    .ReactTable {
+      max-height: 30vh;
+    }
+  }
 }
