--- a/client/src/Components/Login/Login.css
+++ b/client/src/Components/Login/Login.css
@@ -77,7 +77,7 @@
     margin-top: 10px; }
 
 .bg {
-  background-image: url("../../assets/images/login_bg.webp");
+  background-image: url("../../assets/images/login_bg_LIMS.webp");
   position: absolute;
   height: 100%;
   background-position: center center;
