--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -1151,6 +1151,17 @@ th {
   background: rgba(0, 0, 0, 0.4);
   height: 100%; }
 
+.barcodePopup .algaeh-modal {
+  margin-top: 20vh !important;
+  max-width: 50vw !important; }
+  .barcodePopup .algaeh-modal .popRightDiv {
+    min-height: 20vh !important;
+    max-height: 25vh !important; }
+    .barcodePopup .algaeh-modal .popRightDiv img {
+      margin-left: auto;
+      margin-right: auto;
+      display: block; }
+
 .tab-container .tab-button {
   padding: 2px 10px;
   font-weight: normal;
