--- a/client/src/Components/Laboratory/AccessionAcknowledgement/AccessionAcknowledgement.css
+++ b/client/src/Components/Laboratory/AccessionAcknowledgement/AccessionAcknowledgement.css
@@ -13,6 +13,13 @@
 .hptl-phase1-accession-acknowledgement-form td {
   border-right: 1px solid #e6e6e6; }
 
+.hptl-phase1-accession-acknowledgement-form #accessionAcknoweldgeGrid_Cntr .ReactTable {
+  max-height: 60vh !important; }
+
 .hdg_bredcrump {
   max-width: 50% !important;
   flex: 0 0 35% !important; }
+
+.badge {
+  font-size: 0.7rem;
+  margin-top: 5px; }
