--- a/client/src/Components/Laboratory/SampleCollections/SampleCollections.css
+++ b/client/src/Components/Laboratory/SampleCollections/SampleCollections.css
@@ -7,3 +7,7 @@
     padding-bottom: 10px; }
   .hptl-sample-coll-details #sampleCollectionGrid_Cntr .ReactTable {
     max-height: 30vh; }
+
+.badge {
+  font-size: 0.7rem;
+  margin-top: 5px; }
