Added Leave Master All Screen + Employee Payment Screen + Salary Payment

--- a/client/src/Components/PayrollManagement/SalaryManagement/SalaryManagement.css
+++ b/client/src/Components/PayrollManagement/SalaryManagement/SalaryManagement.css
@@ -1,3 +1,6 @@
+.salary_management .toggle-section {
+  margin: 0 !important; }
+
 .salary_management .hptl-AttendanceRegularization-form {
   margin: 0 0 15px; }
 
