--- a/client/src/Components/PayrollManagement/SalaryManagement/SalaryManagement.scss
+++ b/client/src/Components/PayrollManagement/SalaryManagement/SalaryManagement.scss
@@ -1,4 +1,7 @@
 .salary_management {
+  .toggle-section {
+    margin: 0 !important;
+  }
   .hptl-AttendanceRegularization-form {
     margin: 0 0 15px;
   }
